2011-08-25  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-edit-string): Let-bind `search-ring' and
	`regexp-search-ring' to their global values to protect from
	updating by `read-from-minibuffer' (bug#9185).

2011-08-25  Juri Linkov  <juri@jurta.org>

	* textmodes/ispell.el (ispell-command-loop): Add newline
	at the end of the "Use option `i'..." line.

2011-08-25  Juri Linkov  <juri@jurta.org>

	* battery.el (display-battery-mode): If `battery-status-function'
	or `battery-mode-line-format' is nil, display the message and set
	`display-battery-mode' to nil (bug#9363).

2011-08-25  Eli Zaretskii  <eliz@gnu.org>

	* buff-menu.el (Buffer-menu-buffer+size): Remove calls to
	bidi-string-mark-left-to-right; they are unnecessary now.

2011-08-25  Deniz Dogan  <deniz@dogan.se>

	* net/quickurl.el: Documentation typo fixes.

2011-08-25  Chong Yidong  <cyd@stupidchicken.com>

	* window.el (bury-buffer, quit-window): Use bury-buffer-internal.

2011-08-25  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/derived.el (define-derived-mode): Doc fix.

	* mail/smtpmail.el (smtpmail-smtp-user): Add version: tag.
	(smtpmail-via-smtp): Handle nil response from smtp.

2011-08-24  Juri Linkov  <juri@jurta.org>

	* proced.el (proced-marked): Inherit from `error' instead of
	`font-lock-warning-face'.

	* ibuffer.el (ibuffer-marked-face): Change default face from
	`font-lock-warning-face' to `warning'.
	(ibuffer-deletion-face): Change default face from
	`font-lock-type-face' to `error'.

	* battery.el (battery-update): Use the face `error' instead of
	`font-lock-warning-face' (bug#6117).

2011-08-24  Juri Linkov  <juri@jurta.org>

	* faces.el (success): Change face color from "Green3" to
	"ForestGreen" on light background (bug#9353).

2011-08-24  Chong Yidong  <cyd@stupidchicken.com>

	* window.el (quit-window): Renamed from quit-restore-window.  Use
	same arglist as old quit-window.
	(frame-auto-delete): Doc fix.

	* view.el (view-mode-exit): Use quit-window.
