@@ -1445,9 +1445,10 @@ string.  NLINES has the same meaning as in `occur'."
      (t (regexp-quote isearch-string)))
     (if current-prefix-arg (prefix-numeric-value current-prefix-arg))))
   (let ((case-fold-search isearch-case-fold-search)
-	;; set `search-upper-case' to nil to not call
-	;; `isearch-no-upper-case-p' in `occur-1'
-	(search-upper-case nil))
+	;; Set `search-upper-case' to nil to not call
+	;; `isearch-no-upper-case-p' in `occur-1'.
+	(search-upper-case nil)
+	(search-spaces-regexp search-whitespace-regexp))
     (occur regexp nlines)))
 
 (declare-function hi-lock-read-face-name "hi-lock" ())
